# AgentAgno

./: .env  Monitor_Campanhas.py  README.md  app.py  pyproject.toml  requirements.txt  utils.py
arquivos/: 2428804_test_report_20250729_175658_5221968357.csv
custom_uploader/: __init__.py
custom_uploader/frontend/: index.html
tmp/: agent.db
